meecast (0.7.6) unstable; urgency=low

  * Added horly forcast for openweathermap.org source 

 -- Vlad Vasiliev <vlad@gas.by>  Mon, 12 Aug 2013 22:31:23 +0200

meecast (0.7.5) unstable; urgency=low

  * Added icon for openweathermap.com
  * Fixed problem with current weather in foreca.com source
  * Updated Russian translations
  * Added Chinese(Taiwan), Chinese (Hong Kong) translations
  * Fixed problem with Chinese translation
  * Added translators of Spanish and Chines (Taiwan) 

 -- Vlad Vasiliev <vlad@gas.by>  Mon, 12 Aug 2013 22:31:23 +0200


meecast (0.7.4) unstable; urgency=low

  * Added description strings and icon to gismeteo.ru 
  * Added icon for foreca.com
  * Fixed problem with updating
  * Added icon for openweathermap.org 
  * Added station Halikko, Finland to weather.com
  * Updated Catalan, Finish, Italian, Serbian, Norwegain, Chinese (Hong Kong) translations
  * Updated USA stations in foreca.com 

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 04 Aug 2013 15:31:23 +0200

meecast (0.7.3) unstable; urgency=low

  * Added new source Openwethermap.org
  * Added description string for weather.com
  * Fixed problem with Catalan language
  * Added Llagostera, Spain to weather.com source
  * Updated Arabic, Catalan, Finish, Italian, Serbian, Russian translations
  * Added station Vittskovle (Sweden) to weather.com
  * Fixed problem with Map  
  * Fixed problem with Foreca.com source

 -- Vlad Vasiliev <vlad@gas.by>  Fri, 21 Jun 2013 15:31:23 +0200

meecast (0.7.2) unstable; urgency=low

  * Added description strings and icon to gismeteo.ru 
  * Added icon for hko.gov.hk
  * Fixed problem with locale for date if language is System
  * Added station Busteni, Eforie, Mangalia (Romania) to gismeteo.ru
  * Updated Albanian, Catalan, Finish, Italian, Norwegian, Portuguese, Serbian translations
  * Fixed problem with Serbian translation

 -- Vlad Vasiliev <vlad@gas.by>  Thu, 09 May 2013 19:31:23 +0200

meecast (0.7.1) unstable; urgency=low
