@@ -1,6 +1,7 @@
 meecast (0.7.6) unstable; urgency=low
 
-  * Added horly forcast for openweathermap.org source 
+  * Added icon for openweathermap.com
+  * Added hourly forcast for openweathermap.org source 
 
  -- Vlad Vasiliev <vlad@gas.by>  Mon, 12 Aug 2013 22:31:23 +0200
 
